# tournament_core

./: .gitmodules  Cargo.toml  bewerbs.json  build.rs  conf.json  days.json  fencers.json
src/: arena_slot.rs  bewerb.rs  container.rs  day.rs  fencer.rs  fencer_service.rs  group.rs  lib.rs  main.rs  round.rs  timeslot.rs  tournament_core.rs  tournament_service.rs
src/error/: mod.rs
