[package]
name = "tournament_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.12"
